--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-    <html>
+<html manifest="cache.manifest">
     <head>
         <meta charset="utf-8">
-        <title>Per Diem</title>
+        <title>Budget</title>
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="default" />
         <meta name="viewport" content = "width = device-width, initial-scale = 1, user-scalable = no" />
-        <link href="styles/main.css" rel="stylesheet"></link>
+        <link href="main.css" rel="stylesheet"></link>
     </head>
     <body>
 
@@ -47,6 +47,7 @@
             </div>
         </div>
 
+        <!-- Templates -->
 
         <script id="expense-row" type="text/html">
             <tr id="<%= id %>" data-expense-action>
@@ -70,7 +71,6 @@
             </tr>
         </script>
 
-            <script src="build/index.js"></script>
-
-        </body>
+        <script src="main.TIMESTAMP.js"></script>
+    </body>
 </html>
