--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h1 class="center padding-2">Budgets</h1>
             <ul 
                 data-budget-list-mount
-                class="list list-bordered rounded padding-1"
+                class="list list-bordered rounded margin-1"
                 />
             <button 
                 data-new-budget
@@ -65,9 +65,9 @@
                 <button data-show-selection class="left link">Back</button>
                 <%= name %>
             </h1>
-            <div class="row padding-1">
+            <div class="row padding-1 expense-table">
                 <table 
-                    class="table table-bordered rounded">
+                    class="table table-bordered rounded center">
                     <thead>
                         <tr>
                             <th>Day</th>
