--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                 </table>
             </div>
             <div class="padding-1 row">
-                <span class="left padding-2">
+                <span class="right padding-2">
                     <span class="strong">Balance:</span> <span data-running-total-mount></span>
                 </span>
                 <button 
                     data-reset-mount
-                    class="right padding-2 rounded link"
+                    class="left padding-2 rounded link"
                     >Start New Week</button>
             </div>
         </script>
