--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <script id="budget" type="text/html">
             <h1 class="padding-2 center">
-                <button data-show-selection class="left link">Back</button>
+                <button data-show-selection class="left link">Budgets</button>
                 <%= name %>
             </h1>
             <div class="row padding-1 expense-table">
