--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
             </li>
         </script>
 
+        <script id="total-row" type="text/html">
+            <li class="padding-2 clearfix">
+                <div class="right"><span class="strong">Total<span>: <span>$<%= grand_total %></span></div>
+            </li>
+        </script>
+
         <script id="budget-selection" type="text/html">
             <h1 class="center padding-2">Budgets</h1>
             <ul 
