adds link to restart all budgets at once

--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
                 class="list list-bordered rounded margin-1"
                 />
             <% if (has_budgets) { %>
-                <button data-new-budget class="padding-2 left link">New Budget</button>
+                <button data-new-budget class="padding-2 left link">New budget</button>
+                <button data-reset-all class="padding-2 left link">Restart all budgets</button>
             <% } else { %> 
                 <div class="padding-2">
-                    <button data-new-budget class="padding-2 rounded primary wide block">New Budget</button>
+                    <button data-new-budget class="padding-2 rounded primary wide block">New budget</button>
                 </div>
             <% } %>
         </script>
