Adds initial modal markup and css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     </head>
     <body>
 
-        <div data-app class="wrapper">
-            <div data-view-region></div>
+        <div class="wrapper">
+            <div data-app class="app">
+                <div data-view-region></div>
+            </div>
+            <div id="modal">Hello World</div>
         </div>
 
         <!-- Templates -->
