Gets basic modal flow working with create budget modal

--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
         </script>
 
         <script id="create-budget" type="text/html">
-            Dude, lets make a buuuuudget!
+            <input data-budget-name></input>
+            <input data-allowance-name></input>
+            <div data-cancel>Cancel</div>
+            <div data-accept>Accept</div>
         </script>
 
         <script src="main.TIMESTAMP.js"></script>
