wire up reset week button

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <script id="budget-actions" type="text/html">
             <button 
-                data-reset-mount
+                data-reset-budget
                 class="left padding-2 rounded link"
                 >Start New Week</button>
         </script>
